# OpenVla_cr5

dofbot_description/: CMakeLists.txt
dofbot_description/launch/: gazebo.launch.py
dofbot_description/urdf/: cr5_robot.xacro  gazebo.xacro  new_cr5.xacro  ros2_control.xacro
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/cr5_bringup/include/: joystick_control.hpp
install/cr5_bringup/lib/cr5_bringup/: joystick_control_node
install/cr5_bringup/share/cr5_bringup/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/dobot_moveit2/share/dobot_moveit2/: .setup_assistant  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/dobot_msgs_v4/share/dobot_msgs_v4/: local_setup.sh  (+3 more)
install/openvla_ros_interface/share/openvla_ros_interface/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/dofbot_description/: CMakeLists.txt  package.xml
src/dofbot_description/config/: gz_bridge.yaml  ros2_controllers.yaml
src/dofbot_description/launch/: gazebo2.launch.py
src/dofbot_description/urdf/: gazebo.xacro  gripper.xacro  new_cr5.xacro  ros2_control.xacro
src/dofbot_description/worlds/: openvla_test.world
src/dofbot_moveit/: CMakeLists.txt  package.xml
src/dofbot_moveit/config/: cr5_robot.srdf  initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml
src/dofbot_moveit/launch/: launch_moveit.launch.py
src/openvla_ros_interface/: setup.cfg  setup.py
src/openvla_ros_interface/openvla_ros_interface/: old.txt
(+79 files in other folders)
