<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>openvla_ros_interface</name>
  <version>0.0.1</version>
  <description>MoveIt2 integration for Dobot arm with OpenVLA API</description>
  <maintainer email="dobot@todo.todo">dobot</maintainer>
  <license>MIT</license>

  <!-- Runtime dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>shape_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>tf_transformations</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend> <!-- ADDED -->
  <exec_depend>urdfdom_py</exec_depend> <!-- CORRECTED -->
  <exec_depend>orocos_kdl_vendor</exec_depend> <!-- ADDED -->
  <exec_depend>python3-numpy</exec_depend> <!-- ADDED -->

  <!-- For HTTP requests -->
  <exec_depend>python3-requests</exec_depend>

  <!-- Test dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>